--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,8 +5,8 @@
     android:installLocation= "preferExternal">
 
     <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="17" />
+        android:minSdkVersion="15"
+        android:targetSdkVersion="23" />
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -22,6 +22,10 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" 
         android:allowBackup= "true">
+         
+         <meta-data android:name="com.google.android.gms.version"
+        android:value="@integer/google_play_services_version" />
+         
         <activity android:name="Splash" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,9 +35,17 @@
             
   
         </activity>
+         <activity android:name="NoteInfoActivity" >
+        </activity>
+         <activity android:name="CountryNoteSelectorActivity" >
+        </activity>
+        
         <activity android:name="MainActivity" >
         </activity>
-         <activity android:name="SecondActivity" >
+        <activity android:name="NewMainActivity" >
+        </activity>
+        
+        <activity android:name="SecondActivity" >
         </activity>
         <activity android:name="Menu" >
         </activity>
@@ -46,13 +58,12 @@
     <activity android:name="com.startapp.android.publish.AppWallActivity"
  android:theme="@android:style/Theme.Translucent"
  android:taskAffinity="com.appsimple.DetectorBilleteFalso.AppWall"
-
-
-android:configChanges="orientation|keyboardHidden"/>
+	android:configChanges="orientation|keyboardHidden"/>
     
-        <activity
-            android:name="com.google.ads.AdActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
+    <activity android:name="com.google.android.gms.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+            android:theme="@android:style/Theme.Translucent" />
+    
     </application>
 
 </manifest>
