--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.appsimple.detectorbilletesfalsos"
-    android:versionCode="22"
-    android:versionName="1.4" 
+    android:versionCode="80"
+    android:versionName="2.1" 
     android:installLocation= "preferExternal">
 
     <uses-sdk
@@ -18,7 +18,7 @@
 <uses-permission android:name= "android.permission.GET_TASKS" />
     
     <application 
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/dbf_ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" 
         android:allowBackup= "true">
